--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "author": "StreetHub <hello@streethub.com>",
   "description": "Simple & extendable image processing library",
   "dependencies": {
-    "bluebird": "2.3.2",
-    "request": "2.42.0"
+    "bluebird": "^2.3.2",
+    "request": "^2.87.0"
   },
   "devDependencies": {
     "chai": "^1.9.1",
